--- a/src/app/ConversationComponents/dialog/dialog.component.scss
+++ b/src/app/ConversationComponents/dialog/dialog.component.scss
@@ -2,23 +2,19 @@ body { margin: 0; }
 #addUserForm{position: absolute; }
 #sidebar, #content, #Sending { position: absolute; }
 #sidebar, #content, #Sending { overflow: auto; padding: 10px; }
-#header {
- height: 10%;
- border-bottom: 2px solid #7B5427;
-}
-#header h1 { padding: 20px; margin: 0; }
 #sidebar {
- width: 10%; border-right: 1px solid #231F20;
+ width: 12%;
  top: 10%; /* Расстояние от верхнего края */
  bottom: 25%; /* Расстояние снизу  */
+ background: #708090;
  ul{
    left:0px;
  }
 }
 #content {
  top: 10%; /* Расстояние от верхнего края */
- left: 10%; /* Расстояние от левого края */
- bottom: 25%; right: 0;
+ left: 12%; /* Расстояние от левого края */
+ bottom: 25%; right: 0%;
 }
 #Sending {
   top:75%;
@@ -39,4 +35,28 @@ body { margin: 0; }
 margin-right: 5px;
 margin-bottom: 5px !important;
 margin-top: 5px;
+}
+.blog-card{
+  position: absolute;
+  left: 30%;
+  top: 30%;
+  width: 30%;
+  height: 35%;
+  display:flex;
+  cursor: pointer;
+   align-items: center;
+   margin-bottom:30px;
+  justify-content: center;
+  border-radius: 25px;
+  background: white;
+  box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
+  background-color:#B0C4DE !important;
+}
+
+.inner-part{
+  width:95%;
+  height:95%;
+  padding: 0 5px;
+  transition-delay: .3s;
+  align-items:center;
 }
