--- a/src/app/UserAndGroupComponents/Group/group.component.html
+++ b/src/app/UserAndGroupComponents/Group/group.component.html
@@ -12,11 +12,17 @@
         </div>
         <div class="buttons">
           <button mat-raised-button class="ml-2" (click)="openGroupForm()" *ngIf="creator"><i class="fas fa-cog"></i> Настройки</button>
-          <button mat-raised-button class="ml-2" routerLink="/dialog/{{group.dialogId}}"><i class="fas fa-user-circle"></i> Участники</button>
+          <button mat-raised-button class="ml-2" (click)="showSubscribers()"><i class="fas fa-user-circle"></i> Участники</button>
           <button mat-raised-button class="ml-2" routerLink="/dialog/{{group.dialogId}}" *ngIf="subscriber"><i class="fas fa-comments"></i> Чат</button>
-          <button mat-raised-button class="ml-2" (click)="openGroupForm()" *ngIf="!subscriber"><i class="fas fa-check"></i> Вступить</button>
-          <button mat-raised-button class="ml-2" (click)="openGroupForm()" *ngIf="subscriber"><i class="fas fa-ban"></i> Покинуть</button>
+          <button mat-raised-button class="ml-2" (click)="subscribeGroup()" *ngIf="!subscriber"><i class="fas fa-check"></i> Вступить</button>
+          <button mat-raised-button class="ml-2" (click)="leaveGroup()" *ngIf="subscriber"><i class="fas fa-ban"></i> Покинуть</button>
         </div>
       </div>
     </div>
+    <div *ngIf="subscriversVisible" class="subscribers">
+        <button mat-raised-button class="ml-2" (click)="closeSubscribers()"><i class="fas fa-minus-circle"></i>Закрыть</button>
+      <div *ngFor ='let user of users' align="center">
+        <app-user-card [(us)]="user"></app-user-card>
+      </div>
+  </div>
 </body>
