--- a/src/app/UserAndGroupComponents/Group/group.component.scss
+++ b/src/app/UserAndGroupComponents/Group/group.component.scss
@@ -81,7 +81,7 @@
 }
 
 .buttons button{
-  margin-top: 10px;
+  margin: 10px;
 }
 
 .notification {
@@ -90,4 +90,23 @@
     height:98%;
     transition: .6s;
     margin-left: 10px;
+}
+
+.subscribers {
+  position: absolute;
+  top:10%;
+  right: 0%;
+  min-height: 100px;
+  min-width:200px;
+  max-width: 400px;
+   margin-bottom:10px;
+  justify-content: center;
+  border-radius: 25px;
+  background: white;
+  box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
+}
+
+.subscribers button{
+  margin:10px;
+    border-radius: 25px;
 }
