--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="isLoading" class="adv-page">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-8 col-md-12" >
+            <div class="col-lg-6 col-md-12" >
                 <div class="advertisement">
                     <div class="container">
                         <div class="row">                  
@@ -25,7 +25,28 @@
                                 {{adv.advertisementName}}                            
                             </div>
                             <div class="col-12 p-0 advertisement-img">
-                                <img src='http://localhost:1234/getimg/{{adv.imageKey}}'/>           
+                              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                </ol>
+                                <div class="carousel-inner max-he">
+                                  <div class="carousel-item img-h active">
+                                    <img class="d-block img-h w-100 " src='http://localhost:1234/getimg/{{adv.imageKeys[0]}}' alt="Первый слайд">
+                                  </div>
+                                  <div class="carousel-item img-h">
+                                    <img class="d-block img-h w-100" src='http://localhost:1234/getimg/{{adv.imageKeys[1]}}' alt="Второй слайд">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>          
                             </div>
                             <div class="col-12  advertisement-des">                     
                                 <p class="tittle">Описание<p>
