--- a/src/app/allusers/advertisement-filter/advertisement-filter.component.html
+++ b/src/app/allusers/advertisement-filter/advertisement-filter.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="isLoaded" class="filter">
+
     <form [formGroup]="service.getFilterForm()">
      <div class="myrow pt-4">
             <div class=" col-3 choose_bar d-flex justify-content-end">
@@ -14,24 +15,64 @@
             <div class="col-3"></div>
         </div>
     </form>
+
+<mat-accordion class="colorx allfilters">
+    <mat-expansion-panel class="colorx" (opened)="panelOpenState = true"
+                       (closed)="panelOpenState = false">
+    <mat-expansion-panel-header class="colorx">
+      <mat-panel-title class="colorx">
+       Фильтры
+      </mat-panel-title>
+    </mat-expansion-panel-header>
     <div>
-    <section class="example-section">
-        <mat-checkbox class="example-margin"  [(ngModel)]="sub.isChecked"
-        *ngFor="let sub of filters.subjects; let i = index" class="advs mr-2" >
-            {{sub.translateName}}
-        </mat-checkbox>
-    </section>
-    <div >
+        <section class="example-section">
+            <mat-checkbox class="example-margin"  [(ngModel)]="sub.isChecked"
+            *ngFor="let sub of filters.subjects; let i = index" class="advs mr-2" >
+                {{sub.translateName}}
+            </mat-checkbox>
+        </section>
+    </div>
     <form [formGroup]="service.getFilterForm()">
         <div class="form-group price">
             <input formControlName="minPrice" type="text" (keypress)="numberOnly($event)" class="mr-3 col-2 form-control" id="min" placeholder="мин. цена">
             <input type="text"  formControlName="maxPrice" (keypress)="numberOnly($event)" class="form-control col-2" id="max" placeholder="макс. цена">
         </div>
-     </form>
+    </form>
+    <div class="tags">
+        <mat-form-field class="example-chip-list">
+            <mat-chip-list #chipList aria-label="tag selection">
+              <mat-chip *ngFor="let tag of tags" [selectable]="selectable"
+                       [removable]="removable" (removed)="remove(tag)">
+                {{tag.name}}
+                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+              </mat-chip>
+              <input placeholder="Теги"
+                     [matChipInputFor]="chipList"
+                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                     [matChipInputAddOnBlur]="addOnBlur"
+                     (matChipInputTokenEnd)="add($event)">
+            </mat-chip-list>
+          </mat-form-field>      
     </div>
     <div class="d-flex justify-content-center">
         <button type="button"  (click)="refresh()" class="btn btn-success">Фильтровать</button>
     </div>
-    </div>
-    <app-all-advertisements  *ngIf="isLoaded" [(advs)]="advs"></app-all-advertisements>
+</mat-expansion-panel>
+</mat-accordion>
 </div>
+    <div>
+        <app-all-advertisements  *ngIf="isLoaded" [(advs)]="advs"></app-all-advertisements>
+    </div>
+    
+
+   
+
+
+    
+
+
+
+
+
+
+
