add groups sections

--- a/src/app/ConversationComponents/dialogMemberCard/dialogMemberCard.component.scss
+++ b/src/app/ConversationComponents/dialogMemberCard/dialogMemberCard.component.scss
@@ -6,10 +6,10 @@
 }
 
 .blog-card{
-  min-height: 20px;
-  max-height: 40px;
-  min-width:180px;
-  max-width: 200px;
+  min-height: 3vh;
+  max-height: 5vh;
+  min-width:200px;
+  max-width: 15vw;
   display:flex;
   cursor: pointer;
    align-items: left;
