--- a/src/app/UserAndGroupComponents/group-card/group-card.component.html
+++ b/src/app/UserAndGroupComponents/group-card/group-card.component.html
@@ -6,6 +6,7 @@
       </label>
       <div class="content ">
         <div class="title">{{group.name}}</div>
+        <label for="">{{group.subjectName}}</label>
       </div>
     </div>
   </div>
