--- a/src/app/ConversationComponents/dialog/dialog.component.scss
+++ b/src/app/ConversationComponents/dialog/dialog.component.scss
@@ -3,7 +3,8 @@ body { margin: 0; }
 #sidebar, #content, #Sending { position: absolute; }
 #sidebar, #content, #Sending { overflow: auto; padding: 10px; }
 #sidebar {
- width: 12%;
+  min-width:220px;
+  max-width: 15vw;
  top: 10%; /* Расстояние от верхнего края */
  bottom: 25%; /* Расстояние снизу  */
  background: #708090;
