--- a/src/app/UserAndGroupComponents/group-list/group-list.component.html
+++ b/src/app/UserAndGroupComponents/group-list/group-list.component.html
@@ -23,6 +23,10 @@
               <small class="form-text text-muted" *ngIf="groupService.getGroupCreationForm().controls['groupName'].errors.minlength">name is too short</small>
               <small  class="form-text text-muted" *ngIf="groupService.getGroupCreationForm().controls['groupx`Name'].errors.maxlength">name is too long</small>
             </div>
+            <label  for="sel1">Раздел</label>
+            <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
+                <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
+            </select>
           </div>
       </form>
       <button class="btn btn-light btn-primary-spacing" (click)="createGroup()">Create</button>
@@ -39,6 +43,11 @@
             <small class="form-text text-muted" *ngIf="groupService.getGroupSearchPanel().controls['searchName'].errors.minlength">name is too short</small>
             <small  class="form-text text-muted" *ngIf="groupService.getGroupSearchPanel().controls['searchName'].errors.maxlength">name is too long</small>
           </div>
+          <label  for="sel1">Раздел</label>
+          <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
+              <option value="">Любой</option>
+              <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
+          </select>
         </div>
         <button class="btn btn-light btn-primary-spacing" (click)="search()">Search</button>
         <button class="btn btn-dark btn-primary-spacing" (click)="closeSearchPanel()">Cancel</button>
