--- a/src/app/UserAndGroupComponents/Group/group.component.scss
+++ b/src/app/UserAndGroupComponents/Group/group.component.scss
@@ -5,6 +5,19 @@
   box-sizing: border-box;
 }
 
+.sidebar {
+ position: absolute;
+ min-width:220px;
+ max-width: 15vw;
+ top: 10vh; /* Расстояние от верхнего края */
+ bottom: 0; /* Расстояние снизу  */
+ background: #708090;
+}
+
+.sidebar button{
+  margin-top: 10px;
+}
+
 .blog-card{
   min-height: 400px;
   min-width:800px;
@@ -108,6 +121,6 @@
 }
 
 .subscribers button{
-  margin:10px;
+  margin:5px;
     border-radius: 25px;
 }
