--- a/src/app/UserAndGroupComponents/group-list/group-list.component.scss
+++ b/src/app/UserAndGroupComponents/group-list/group-list.component.scss
@@ -2,7 +2,8 @@ body { margin: 0; }
 #sidebar, #content { position: absolute; }
 #sidebar, #content { overflow: auto; padding: 10px; }
 #sidebar {
- width: 10vw;
+  min-width:220px;
+  max-width: 15vw;
  top: 10vh; /* Расстояние от верхнего края */
  bottom: 0; /* Расстояние снизу  */
  background: #708090;
@@ -21,7 +22,7 @@ margin-top: 5px;
 
 .blog-card{
   position: absolute;
-  left: 30%;
+  margin-left: 30%;
   top: 30%;
   width: 30%;
   height: 35%;
