--- a/src/app/UserAndGroupComponents/userCard/userCard.component.scss
+++ b/src/app/UserAndGroupComponents/userCard/userCard.component.scss
@@ -13,7 +13,7 @@
   display:flex;
   cursor: pointer;
    align-items: left;
-   margin-bottom:30px;
+   margin:10px;
   justify-content: center;
   border-radius: 25px;
   background: white;
