--- a/src/app/UserAndGroupComponents/Group/group.component.scss
+++ b/src/app/UserAndGroupComponents/Group/group.component.scss
@@ -5,23 +5,33 @@
   box-sizing: border-box;
 }
 
-.sidebar {
- position: absolute;
+#group,#sidebar { position: absolute; }
+#sidebar, #group{ overflow: auto; padding: 10px; }
+
+#sidebar {
  min-width:220px;
- max-width: 15vw;
+ max-width: 16vw;
+ bottom: 0;
  top: 10vh; /* Расстояние от верхнего края */
- bottom: 0; /* Расстояние снизу  */
  background: #708090;
 }
 
-.sidebar button{
-  margin-top: 10px;
+#sidebar button{
+  margin: 10px;
+}
+
+#group {
+ top: 10%; /* Расстояние от верхнего края */
+ left: 0; /* Расстояние от левого края */
+ bottom: 0;
+  right: 0%;
 }
 
 .blog-card{
-  min-height: 400px;
-  min-width:800px;
-  max-width: 850px;
+  overflow: hidden;
+  min-height: 500px;
+  min-width:660px;
+  max-width: 50vw;
   display:flex;
    align-items: center;
    margin-bottom:30px;
@@ -29,15 +39,23 @@
   border-radius: 25px;
   background: white;
   box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
+  flex-direction: column;
+  text-align:left;
+}
 
+.post-part {
+  width:95%;
+  flex-direction: column;
+}
+
+.post-part button{
+  margin: 10px;
 }
 
 .inner-part{
+  overflow: hidden;
   display: flex;
   width:95%;
-  height:95%;
-  padding: 0 5px;
-  transition-delay: .3s;
 }
 
 
@@ -49,6 +67,7 @@
   overflow: hidden;
   border-radius: 20px;
   box-shadow: 2px 3px 15px rgba(252,56,56,.1);
+    margin: 10px;
 }
 
 .img img{
@@ -63,7 +82,13 @@
 .content{
   width:50%;
   height:80%;
-  margin-left: 0px;
+  display: flex;
+  margin-left: 10px;
+  flex-direction: column;
+}
+
+.content button{
+  max-width: 150px;
 }
 
 .content span{
@@ -90,7 +115,9 @@
 
 .buttons{
   width: 20%;
-  height: 100%;
+  min-height: 300px;
+  max-height: 500px;
+  flex-direction: column;
 }
 
 .buttons button{
@@ -108,7 +135,7 @@
 .subscribers {
   overflow: auto;
   position: absolute;
-  top:10%;
+  top:0%;
   right: 0%;
   min-height: 100px;
   min-width:200px;
@@ -122,5 +149,5 @@
 
 .subscribers button{
   margin:5px;
-    border-radius: 25px;
+  border-radius: 25px;
 }
