--- a/src/app/allusers/my-orders/my-orders.component.scss
+++ b/src/app/allusers/my-orders/my-orders.component.scss
@@ -4,18 +4,22 @@
 {
     padding:50px;
 }
-th
+
+
+  th
 {
     text-align:center;
 }
 
-table
-{
-    max-width:80%;
-}
+table {
+    width: 100%;
+  }
 
-.mat-form-field {
+  .mat-form-field {
     font-size: 14px;
+    width: 100%;
   }
   
+  
+
   
