--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -38,6 +38,13 @@
   background-color:#FCFCFC;
 }
 
+
+.all-images
+{
+  margin:11px;
+  cursor:pointer;
+
+}
 .registration-label
 {
   font-size:22px;
