--- a/src/app/allusers/advertisement/advertisement.component.html
+++ b/src/app/allusers/advertisement/advertisement.component.html
@@ -7,9 +7,9 @@
                         <div class="row">                  
                             <div  class="col-12 advertisement-tittle">
                                 <div class="prop d-flex justify-content-between w-100 edit">
-                                    <p *ngIf="!isUserAdv" class="userName">
-                                        {{adv.authorUsername}}
-                                    </p>
+                                    <div *ngIf="!isUserAdv" class="userName">
+                                      {{adv.firstName}} {{adv.surName}} 
+                                    </div>
                                     <p *ngIf="!isUserAdv && can" data-toggle="modal" data-target="#RequestModel1">
                                         <i class="far fa-handshake h2"></i>
                                     </p>
@@ -45,7 +45,7 @@
                               </div>          
                             </div>
                             <div class="col-12  advertisement-des">                     
-                                <p class="tittle">Описание<p>
+                                <p class="tittle">Описание</p>
                                 <p class="adv-des">
                                    {{adv.description}}
                                 </p>
