--- a/src/app/UserAndGroupComponents/user-page/user-page.component.scss
+++ b/src/app/UserAndGroupComponents/user-page/user-page.component.scss
@@ -4,6 +4,23 @@
   padding: 0;
   box-sizing: border-box;
 }
+#sidebar, #content { position: absolute; }
+#sidebar, #content { overflow: auto; padding: 10px; }
+#sidebar {
+  min-width:220px;
+  max-width: 15vw;
+  display: flex;
+  flex-direction: column;
+ top: 10vh; /* Расстояние от верхнего края */
+ bottom: 0; /* Расстояние снизу  */
+ background: #708090;
+}
+
+#content {
+ top: 10vh;
+ left: 220px;
+ bottom: 0; right: 0;
+}
 
 .blog-card{
   min-height: 400px;
@@ -104,6 +121,26 @@
   border-radius: 25px;
   background: white;
   box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
+}
+
+.friends {
+  overflow: auto;
+  position: absolute;
+  top:0%;
+  right: 0%;
+  min-height: 100px;
+  min-width:200px;
+  max-width: 400px;
+   margin-bottom:10px;
+  justify-content: center;
+  border-radius: 25px;
+  background: white;
+  box-shadow:0px 4px 8px 0px rgba(5,5,5,0.5);
+}
+
+.friends button{
+  margin:5px;
+  border-radius: 25px;
 }
 
 .groups button {
