--- a/src/app/allusers/my-orders/my-orders.component.html
+++ b/src/app/allusers/my-orders/my-orders.component.html
@@ -32,10 +32,13 @@
         </ng-container>
         
         <ng-container matColumnDef="actions">
-          <mat-header-cell *matHeaderCellDef>Edit</mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            <div data-toggle="modal" (click)="edit(row)"data-target="#orderModal" style="font-size:25px; cursor:pointer"><i class="fas fa-edit"></i></div>
-          </mat-cell>
+          <span>
+            
+            <mat-header-cell *matHeaderCellDef>Настройки</mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              <div data-toggle="modal" (click)="edit(row)"data-target="#orderModal" style="font-size:25px; cursor:pointer"><i class="fas fa-wrench"></i></div>
+            </mat-cell>
+          </span>
         </ng-container>
 
 
@@ -49,21 +52,23 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Заказ</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Заказ N {{editOrder.orderId}}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <div *ngIf="!isEdited" [formGroup]="service.getEditForm()" class="form-group" >
-         <select formControlName="orderStatus" class="custom-select">
-            <option value="ACCEPTED">Принят</option>
-            <option value="INPROGRESS">В процессе</option>
-            <option value="СOMPLETED">Завершен</option>
-         </select>
-          </div>
-          <div *ngIf="isEdited">
-            Данные сохранены !
+          <div *ngIf="!isEdited">
+              <div *ngIf="userId==editOrder.freelancerId" [formGroup]="service.getEditForm()" class="form-group" >
+            <select formControlName="orderStatus" class="custom-select">
+                <option value="ACCEPTED">Принят</option>
+                <option value="INPROGRESS">В процессе</option>
+                <option value="СOMPLETED">Завершен</option>
+            </select>
+              </div>
+              <div *ngIf="isEdited">
+                Данные сохранены !
+              </div>
           </div>
         </div>
         <div  class="modal-footer">
