--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -41,7 +41,12 @@
 
 .all-images
 {
-  margin:11px;
+  margin-bottom:5px;
+  display:flex;
+  flex-direction:column;
+  width:100%;
+  justify-content:center;
+  align-items:center;
   cursor:pointer;
 
 }
