--- a/src/app/student/add-advertisement/add-advertisement.component.scss
+++ b/src/app/student/add-advertisement/add-advertisement.component.scss
@@ -2,6 +2,18 @@
     width: 100%;
   }
 
+  .all-images
+{
+  margin-bottom:5px;
+  display:flex;
+  flex-direction:column;
+  width:100%;
+  justify-content:center;
+  align-items:center;
+  cursor:pointer;
+
+}
+
 .example-2 .btn-tertiary{color:#555;padding:0;line-height:40px;width:300px;margin:auto;display:block;border:2px solid #555}
 .example-2 .btn-tertiary:hover,.example-2 .btn-tertiary:focus{color:#888;border-color:#888}
 .example-2 .input-file{width:.1px;height:.1px;opacity:0;overflow:hidden;position:absolute;z-index:-1}
